--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/cli": "^0.11.20",
     "@types/nested-error-stacks": "^2.1.0",
     "@types/node": "^17.0.24",
+    "@types/uuid": "^8.3.4",
     "cli": "^1.0.1",
     "rimraf": "^3.0.2",
     "ts-node": "^10.7.0",
@@ -40,6 +41,7 @@
     "fast-json-stringify": "^3.1.0",
     "nested-error-stacks": "^2.1.1",
     "suppress-warnings": "^1.0.2",
-    "tstl": "^2.5.3"
+    "tstl": "^2.5.3",
+    "uuid": "^8.3.2"
   }
 }
