--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "rimraf lib && ttsc",
     "build:test": "rimraf bin && ttsc -p tsconfig.test.json",
     "dev": "npm run build -- --watch",
+    "eslint": "eslint ./**/*.ts",
+    "eslint:fix": "eslint ./**/*.ts --fix",
+    "prettier": "prettier ./**/*.ts --write",
     "test": "node test"
   },
   "repository": {
@@ -36,7 +39,10 @@
     "@types/nested-error-stacks": "^2.1.0",
     "@types/node": "^17.0.24",
     "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
     "cli": "^1.0.1",
+    "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
     "suppress-warnings": "^1.0.2",
     "ts-node": "^10.7.0",
