--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
+    "benchmark": "node benchmark/index.js",
     "build": "rimraf lib && ttsc",
-    "build:test": "rimraf bin && ttsc -p tsconfig.test.json",
+    "build:test": "rimraf bin && ttsc -p test/tsconfig.json",
     "dev": "npm run build -- --watch",
     "eslint": "eslint ./**/*.ts",
     "eslint:fix": "eslint ./**/*.ts --fix",
@@ -35,12 +36,14 @@
   },
   "homepage": "https://github.com/samchon/typescript-json#readme",
   "devDependencies": {
+    "@types/benchmark": "^2.1.1",
     "@types/cli": "^0.11.20",
     "@types/nested-error-stacks": "^2.1.0",
     "@types/node": "^17.0.24",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
+    "benchmark": "^2.1.4",
     "cli": "^1.0.1",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
