--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,5 +11,4 @@ jobs:
           node-version: 16.x
       - run: npm install
       - run: npm run build
-      - run: npm run test -- --exclude=to_json
-      - run: npm run benchmark
+      - run: npm run test
