--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "3.0.1-dev.20220621",
+  "version": "3.0.1-dev.20220622",
   "description": "Faster JSON stringify with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -11,9 +11,10 @@
     "dev": "npm run build -- --watch",
     "eslint": "eslint ./**/*.ts",
     "eslint:fix": "eslint ./**/*.ts --fix",
-    "prettier": "prettier ./**/*.ts --write",
+    "prettier": "prettier  --write ./**/*.{ts,js}",
     "test": "node test",
-    "test:manual": "node test/manual"
+    "test:manual": "node test/manual",
+    "test:application:replace": "npm run build:test && node test/features/application/replace"
   },
   "repository": {
     "type": "git",
