--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "url": "https://github.com/samchon/typescript-json"
   },
   "keywords": [
-    "faster",
+    "fast",
     "json",
     "stringify",
     "typescript",
@@ -58,6 +58,7 @@
     "suppress-warnings": "^1.0.2",
     "ts-node": "^10.7.0",
     "ttypescript": "^1.5.13",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "typescript-is": "^0.19.0"
   }
 }
