--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "3.0.2",
+  "version": "3.0.3",
   "description": "Faster JSON stringify with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -11,6 +11,7 @@
     "dev": "npm run build -- --watch",
     "eslint": "eslint ./**/*.ts",
     "eslint:fix": "eslint ./**/*.ts --fix",
+    "issue": "node test/issue",
     "prettier": "prettier  --write ./**/*.{ts,js}",
     "test": "node test",
     "test:manual": "node test/manual",
