Close #124 and Close #126

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "3.0.6-dev.20220629",
+  "version": "3.0.7-dev.20220630",
   "description": "Faster JSON stringify with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -59,7 +59,7 @@
     "suppress-warnings": "^1.0.2",
     "ts-node": "^10.7.0",
     "ttypescript": "^1.5.13",
-    "typescript": "^4.6.4",
+    "typescript": "4.6.x",
     "typescript-is": "^0.19.0"
   }
 }
