--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "typescript-json",
   "version": "3.0.6",
-  "description": "Faster JSON stringify with only one line",
+  "description": "Runtime type checkers and 5x faster JSON.stringify() function",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
