--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "fast-json-stringify": "^5.0.3",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
+    "sloc": "^0.2.1",
     "suppress-warnings": "^1.0.2",
     "ts-node": "^10.7.0",
     "ttypescript": "^1.5.13",
