--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "typescript-json",
-  "version": "3.0.9-dev.20220704-2",
+  "version": "3.0.9",
   "description": "Runtime type checkers and 5x faster JSON.stringify() function",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
-    "benchmark": "node benchmark/index.js",
+    "benchmark": "node --max-old-space-size=8192 benchmark/index.js",
     "build": "rimraf lib && ttsc",
     "build:test": "rimraf bin && ttsc -p tsconfig.test.json",
     "dev": "npm run build -- --watch",
