--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
-    "benchmark": "node --max-old-space-size=8192 benchmark/index.js",
+    "benchmark": "node benchmark/index.js",
     "build": "rimraf lib && ttsc",
     "build:test": "rimraf bin && ttsc -p tsconfig.test.json",
     "dev": "npm run build -- --watch",
