--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "typescript-json",
-  "version": "3.0.10",
+  "version": "3.0.11",
   "description": "Runtime type checkers and 5x faster JSON.stringify() function",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
     "benchmark": "node benchmark/index.js",
-    "build": "rimraf lib && ttsc",
+    "build": "rimraf lib && ttsc --removeComments --declaration false && ttsc --emitDeclarationOnly",
     "build:test": "rimraf bin && ttsc -p tsconfig.test.json",
     "dev": "npm run build -- --watch",
     "eslint": "eslint ./**/*.ts",
