--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "benchmark": "node benchmark/index.js",
     "build": "rimraf lib && ttsc --removeComments --declaration false && ttsc --emitDeclarationOnly",
-    "build:test": "rimraf bin && ttsc -p tsconfig.test.json",
+    "build:test": "rimraf bin && ttsc -p tsconfig.test.json && prettier --write ./bin/**/*.js",
     "dev": "npm run build -- --watch",
     "eslint": "eslint ./**/*.ts",
     "eslint:fix": "eslint ./**/*.ts --fix",
@@ -52,6 +52,7 @@
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "benchmark": "^2.1.4",
+    "chalk": "^4.1.0",
     "cli": "^1.0.1",
     "fast-json-stringify": "^5.0.3",
     "io-ts": "^2.2.16",
