--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "3.1.1",
+  "version": "3.2.0-dev.20220801",
   "description": "Runtime type checkers and 5x faster JSON.stringify() function",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -12,7 +12,7 @@
     "eslint": "eslint ./**/*.ts",
     "eslint:fix": "eslint ./**/*.ts --fix",
     "issue": "node test/issue",
-    "prettier": "prettier  --write ./**/*.{ts,js}",
+    "prettier": "prettier  --write ./src/**/*.ts",
     "test": "node test",
     "test:manual": "node test/manual",
     "test:application:replace": "npm run build:test && node test/features/application/replace && npm run prettier"
@@ -44,6 +44,7 @@
   },
   "homepage": "https://github.com/samchon/typescript-json#readme",
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "@types/benchmark": "^2.1.1",
     "@types/cli": "^0.11.20",
     "@types/nested-error-stacks": "^2.1.0",
