--- a/tsconfig.json
+++ b/tsconfig.json
@@ -101,5 +101,5 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "include": ["src"]
+  "include": ["src", "test/internal/IPointer.ts"]
 }
