Close #181, tag related properties on `Metadata` and `IJsonSchema`

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "3.2.1",
+  "version": "3.2.2-dev.20220906",
   "description": "Runtime type checkers and 5x faster JSON.stringify() function",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -15,7 +15,7 @@
     "prettier": "prettier  --write ./**/*.ts",
     "test": "node test",
     "test:manual": "node test/manual",
-    "test:application:replace": "npm run build:test && node test/features/application/replace && npm run prettier"
+    "test:application:replace": "node test/features/application/replace && npm run prettier"
   },
   "repository": {
     "type": "git",
