--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "3.3.7",
+  "version": "3.3.8",
   "description": "Runtime type checkers and 5x faster JSON.stringify() function",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -60,16 +60,16 @@
     "benchmark": "^2.1.4",
     "chalk": "^4.1.0",
     "cli": "^1.0.1",
-    "fast-json-stringify": "^5.0.3",
-    "io-ts": "^2.2.16",
+    "fast-json-stringify": "^5.4.0",
+    "io-ts": "^2.2.19",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
     "sloc": "^0.2.1",
     "suppress-warnings": "^1.0.2",
-    "ts-node": "^10.7.0",
+    "ts-node": "^10.9.1",
     "ttypescript": "^1.5.13",
-    "typescript": "4.6.x",
-    "typescript-is": "^0.19.0",
-    "uuid": "^8.3.2"
+    "typescript": "^4.8.4",
+    "uuid": "^8.3.2",
+    "zod": "^3.19.1"
   }
 }
