--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "homepage": "https://github.com/samchon/typescript-json#readme",
   "devDependencies": {
+    "@sinclair/typebox": "^0.24.47",
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "@types/benchmark": "^2.1.2",
     "@types/cli": "^0.11.20",
