--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "3.3.17",
+  "version": "3.3.18",
   "description": "Runtime type checkers and 5x faster JSON.stringify() function",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -49,7 +49,7 @@
   },
   "homepage": "https://github.com/samchon/typescript-json#readme",
   "devDependencies": {
-    "@sinclair/typebox": "^0.24.51",
+    "@sinclair/typebox": "0.24.51",
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "@types/benchmark": "^2.1.2",
     "@types/cli": "^0.11.20",
