--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "rimraf lib && ttsc --removeComments --declaration false && ttsc --emitDeclarationOnly",
     "build:test": "rimraf bin && ttsc -p tsconfig.test.json && prettier --write ./bin/**/*.js",
     "dev": "npm run build -- --watch",
-    "dev:test": "rimraf bin && ttsc -p tsconfig.test.json --watch", 
+    "dev:test": "rimraf bin && ttsc -p tsconfig.test.json --watch",
     "eslint": "eslint ./**/*.ts",
     "eslint:fix": "eslint ./**/*.ts --fix",
     "issue": "node test/issue",
@@ -53,6 +53,8 @@
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "@types/benchmark": "^2.1.2",
     "@types/cli": "^0.11.20",
+    "@types/d3": "^7.4.0",
+    "@types/jsdom": "^20.0.0",
     "@types/nested-error-stacks": "^2.1.0",
     "@types/node": "^17.0.24",
     "@types/uuid": "^8.3.4",
@@ -63,9 +65,11 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cli": "^1.0.1",
+    "d3": "^5.16.0",
     "eslint-plugin-deprecation": "^1.3.2",
     "fast-json-stringify": "^5.4.0",
     "io-ts": "^2.2.19",
+    "jsdom": "^20.0.2",
     "prettier": "^2.6.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
