Prepare #298 - remeasureent is required

--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
-    "benchmark": "rimraf bin && ttsc -p tsconfig.test.json && node bin/benchmark",
+    "benchmark": "npm run build:test && node bin/benchmark",
     "build": "rimraf lib && ttsc --removeComments --declaration false && ttsc --emitDeclarationOnly",
-    "build:test": "rimraf bin && ttsc -p tsconfig.test.json && prettier --write ./bin/**/*.js",
+    "build:test": "rimraf bin && ttsc -p tsconfig.test.json",
+    "build:test:prettier": "npm run build:test && prettier --write ./bin/**/*.js",
     "dev": "npm run build -- --watch",
     "dev:test": "rimraf bin && ttsc -p tsconfig.test.json --watch",
     "eslint": "eslint ./**/*.ts",
     "eslint:fix": "eslint ./**/*.ts --fix",
     "issue": "node test/issue",
     "prettier": "prettier  --write ./**/*.ts",
-    "test": "node test",
+    "test": "node bin/test",
     "test:manual": "node test/manual",
     "test:application:replace": "node test/features/application/replace && npm run prettier"
   },
