--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,4 +11,5 @@ jobs:
           node-version: 16.x
       - run: npm install
       - run: npm run build
+      - run: npm run build:test
       - run: npm run test
