--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "sloc": "^0.2.1",
+    "source-map-support": "^0.5.21",
     "suppress-warnings": "^1.0.2",
     "ts-node": "^10.9.1",
     "ttypescript": "^1.5.13",
