--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "3.3.30",
+  "version": "3.3.31",
   "description": "Runtime type checkers and 5x faster JSON.stringify() function",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -35,11 +35,13 @@
     "jsonschema",
     "generator",
     "assert",
+    "clone",
     "is",
     "validate",
     "equal",
     "runtime",
     "type",
+    "typebox",
     "checker",
     "validator"
   ],
