--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "suppress-warnings": "^1.0.2",
     "ts-node": "^10.9.1",
     "ttypescript": "^1.5.13",
-    "typescript": "^4.8.4",
+    "typescript": "4.8.4",
     "uuid": "^8.3.2",
     "zod": "^3.19.1"
   }
