--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "typescript-json",
-  "version": "3.3.44",
+  "version": "3.4.0",
   "description": "Runtime type checkers and 5x faster JSON.stringify() function",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
+  "bin": {
+    "typia": "./lib/executable/typia.js"
+  },
   "scripts": {
     "benchmark": "npm run build:test && node bin/benchmark",
     "build": "rimraf lib && ttsc --removeComments --declaration false && ttsc --emitDeclarationOnly && npm run build:test",
