--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typia",
-  "version": "3.4.10",
+  "version": "3.4.11",
   "description": "Runtime type checkers and 5x faster JSON.stringify() function",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -18,8 +18,9 @@
     "eslint:fix": "eslint ./**/*.ts --fix",
     "issue": "node test/issue",
     "prettier": "prettier  --write ./**/*.ts",
-    "publish:latest": "ts-node build/publish.ts latest && npm deprecate typescript-json \"Renamed to typia\"",
+    "publish:latest": "ts-node build/publish.ts latest",
     "publish:next": "ts-node build/publish.ts next",
+    "publish:deprecate": "npm deprecate typescript-json \"Renamed to typia\"",
     "test": "node bin/test",
     "test:generate": "ts-node -P tsconfig.test.json build/test.ts",
     "test:manual": "node test/manual",
