--- a/packages/typescript-json/package.json
+++ b/packages/typescript-json/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "3.4.11",
+  "version": "3.4.12",
   "description": "Runtime type checkers and 5x faster JSON.stringify() function",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -15,8 +15,9 @@
     "eslint:fix": "eslint ./**/*.ts --fix",
     "issue": "node test/issue",
     "prettier": "prettier  --write ./**/*.ts",
-    "publish:latest": "ts-node build/publish.ts latest && npm deprecate typescript-json \"Renamed to typia\"",
+    "publish:latest": "ts-node build/publish.ts latest",
     "publish:next": "ts-node build/publish.ts next",
+    "publish:deprecate": "npm deprecate typescript-json \"Renamed to typia\"",
     "test": "node bin/test",
     "test:generate": "ts-node -P tsconfig.test.json build/test.ts",
     "test:manual": "node test/manual",
@@ -68,6 +69,6 @@
     "src"
   ],
   "dependencies": {
-    "typia": "3.4.11"
+    "typia": "3.4.12"
   }
 }
