--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typia",
-  "version": "3.5.0",
+  "version": "3.5.2",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -74,8 +74,10 @@
     "@types/autocannon": "^7.9.0",
     "@types/benchmark": "^2.1.2",
     "@types/cli": "^0.11.20",
+    "@types/commander": "^2.12.2",
     "@types/d3": "^7.4.0",
     "@types/express": "^4.17.14",
+    "@types/inquirer": "^8.2.5",
     "@types/jsdom": "^20.0.0",
     "@types/nested-error-stacks": "^2.1.0",
     "@types/node": "^17.0.24",
@@ -89,12 +91,14 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cli": "^1.0.1",
+    "commander": "^10.0.0",
     "comment-json": "^4.2.3",
     "d3": "^5.16.0",
     "eslint-plugin-deprecation": "^1.3.2",
     "express": "^4.18.2",
     "fast-json-stringify": "^5.4.0",
     "fastify": "^4.9.2",
+    "inquirer": "^8.2.5",
     "io-ts": "^2.2.19",
     "jsdom": "^20.0.2",
     "physical-cpu-count": "^2.0.0",
