--- a/packages/typescript-json/package.json
+++ b/packages/typescript-json/package.json
@@ -1,17 +1,17 @@
 {
   "name": "typescript-json",
-  "version": "3.5.0",
+  "version": "3.5.2",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
     "benchmark": "npm run build:benchmark && node measure/benchmark",
     "build": "rimraf lib && ttsc --removeComments --declaration false && ttsc --emitDeclarationOnly",
-    "build:test": "rimraf bin && ttsc -p tsconfig.test.json",
-    "build:benchmark": "rimraf measure && ttsc -p tsconfig.benchmark.json",
+    "build:test": "rimraf bin && ttsc -p test/tsconfig.json",
+    "build:benchmark": "rimraf measure && ttsc -p benchmark/tsconfig.json",
     "build:test:prettier": "npm run build:test && prettier --write ./bin/**/*.js",
     "dev": "rimraf lib && ttsc --watch",
-    "dev:test": "rimraf bin && ttsc -p tsconfig.test.json --watch",
+    "dev:test": "rimraf bin && ttsc -p test/tsconfig.json --watch",
     "eslint": "eslint ./**/*.ts",
     "eslint:fix": "eslint ./**/*.ts --fix",
     "issue": "node test/issue",
@@ -20,7 +20,7 @@
     "package:deprecate": "npm deprecate typescript-json \"Renamed to typia\"",
     "prettier": "prettier  --write ./**/*.ts",
     "test": "node bin/test",
-    "test:generate": "ts-node -P tsconfig.test.json build/test.ts",
+    "test:generate": "ts-node -P build/tsconfig.json -C ttypescript build/test.ts",
     "test:manual": "node test/manual",
     "test:application:replace": "node test/features/application/replace && npm run prettier"
   },
@@ -72,6 +72,6 @@
     "src"
   ],
   "dependencies": {
-    "typia": "3.5.0"
+    "typia": "3.5.2"
   }
 }
