--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typia",
-  "version": "3.6.6",
+  "version": "3.6.7",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -65,7 +65,7 @@
   },
   "homepage": "https://github.com/samchon/typia#readme",
   "peerDependencies": {
-    "typescript": ">= 4.5.2"
+    "typescript": ">= 4.5.2 && < 5.0.0"
   },
   "devDependencies": {
     "@fastify/type-provider-typebox": "^2.3.0",
