--- a/packages/typescript-json/package.json
+++ b/packages/typescript-json/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "3.6.6",
+  "version": "3.6.7",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -62,7 +62,7 @@
   },
   "homepage": "https://github.com/samchon/typia#readme",
   "peerDependencies": {
-    "typescript": ">= 4.5.2"
+    "typescript": ">= 4.5.2 && < 5.0.0"
   },
   "files": [
     "LICENSE",
@@ -72,6 +72,6 @@
     "src"
   ],
   "dependencies": {
-    "typia": "3.6.6"
+    "typia": "3.6.7"
   }
 }
