Writing #551 - frame and a lilttle bit contents

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "typia.io",
   "version": "0.0.1",
-  "description": "Nextra docs template",
+  "description": "Typia Guide Documents",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,14 +10,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shuding/nextra-docs-template.git"
+    "url": "https://github.com/samchon/typia"
   },
   "author": "Shu Ding <g@shud.in>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/shuding/nextra-docs-template/issues"
+    "url": "https://github.com/samchon/typia/issues"
   },
-  "homepage": "https://github.com/shuding/nextra-docs-template#readme",
+  "homepage": "https://typia.io",
   "dependencies": {
     "next": "^13.0.6",
     "nextra": "latest",
