--- a/examples/package.json
+++ b/examples/package.json
@@ -10,14 +10,14 @@
   "author": "Jeongho Nam",
   "license": "MIT",
   "dependencies": {
-    "typia": "^3.7.5",
+    "typia": "^3.8.0-dev.20230416",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/uuid": "^9.0.1",
     "prettier": "^2.8.7",
     "ts-node": "^10.9.1",
-    "ts-patch": "^2.1.0",
-    "typescript": "^4.9.5"
+    "ts-patch": "^3.0.0-beta3",
+    "typescript": "^5.0.4"
   }
 }
