--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,8 @@
     "editor.codeActionsOnSave": {
       "source.fixAll.eslint": true
     },
+  },
+  "[mdx]": {
+    "editor.wordWrap": "on"
   }
 }
