--- a/package.json
+++ b/package.json
@@ -88,9 +88,8 @@
     "@types/d3": "^7.4.0",
     "@types/express": "^4.17.14",
     "@types/inquirer": "^8.2.5",
-    "@types/jsdom": "^20.0.0",
     "@types/nested-error-stacks": "^2.1.0",
-    "@types/node": "^17.0.24",
+    "@types/node": "^18.15.12",
     "@types/physical-cpu-count": "^2.0.0",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
@@ -117,7 +116,7 @@
     "suppress-warnings": "^1.0.2",
     "tgrid": "^0.8.7",
     "ts-node": "^10.9.1",
-    "ts-patch": "^3.0.0-beta2",
+    "ts-patch": "^3.0.0-rc2",
     "typescript": "^5.0.4",
     "typescript-transform-paths": "^3.4.6",
     "uuid": "^8.3.2",
