--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
     "class-validator": "^0.13.2",
     "cli": "^1.0.1",
     "d3": "^5.16.0",
-    "eslint-plugin-deprecation": "^1.3.2",
+    "eslint-plugin-deprecation": "^1.4.1",
     "express": "^4.18.2",
     "fast-json-stringify": "^5.4.0",
     "fastify": "^4.9.2",
@@ -116,7 +116,7 @@
     "suppress-warnings": "^1.0.2",
     "tgrid": "^0.8.7",
     "ts-node": "^10.9.1",
-    "ts-patch": "^3.0.0-rc2",
+    "ts-patch": "^3.0.0-beta3",
     "typescript": "^5.0.4",
     "typescript-transform-paths": "^3.4.6",
     "uuid": "^8.3.2",
