--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   "scripts": {
     "benchmark": "npm run build:benchmark && node measure/benchmark",
     "benchmark:generate": "ts-node benchmark/generate && npm run build:benchmark",
-    "test:generate": "ts-node -P build/tsconfig.json -C ttypescript build/test.ts",
+    "test:generate": "ts-node -P build/tsconfig.json build/test.ts",
     "----------------------------------------------": "",
-    "build": "rimraf lib && ttsc --removeComments --declaration false && ttsc --emitDeclarationOnly",
-    "build:test": "rimraf bin && ttsc -p test/tsconfig.json",
-    "build:benchmark": "rimraf measure && ttsc -p benchmark/tsconfig.json",
+    "build": "rimraf lib && tsc --removeComments --declaration false && tsc --emitDeclarationOnly",
+    "build:test": "rimraf bin && tsc -p test/tsconfig.json",
+    "build:benchmark": "rimraf measure && tsc -p benchmark/tsconfig.json",
     "build:test:prettier": "npm run build:test && prettier --write ./bin/**/*.js",
-    "dev": "rimraf lib && ttsc --watch",
-    "dev:test": "rimraf bin && ttsc -p test/tsconfig.json --watch",
+    "dev": "rimraf lib && tsc --watch",
+    "dev:test": "rimraf bin && tsc -p test/tsconfig.json --watch",
     "eslint": "eslint ./**/*.ts",
     "eslint:fix": "eslint ./**/*.ts --fix",
+    "prepare": "ts-patch install",
     "prettier": "prettier  --write ./**/*.ts",
     "-----------------------------------------------": "",
     "issue": "node test/issue",
@@ -74,6 +75,7 @@
     "randexp": "^0.5.3"
   },
   "peerDependencies": {
+    "ts-patch": "^2.1.0",
     "typescript": ">= 4.5.2 && < 5.0.0"
   },
   "devDependencies": {
@@ -116,7 +118,7 @@
     "suppress-warnings": "^1.0.2",
     "tgrid": "^0.8.7",
     "ts-node": "^10.9.1",
-    "ttypescript": "^1.5.15",
+    "ts-patch": "^2.1.0",
     "typescript": "^4.9.5",
     "typescript-transform-paths": "^3.4.6",
     "uuid": "^8.3.2",
