--- a/packages/typescript-json/package.json
+++ b/packages/typescript-json/package.json
@@ -7,14 +7,14 @@
   "scripts": {
     "benchmark": "npm run build:benchmark && node measure/benchmark",
     "benchmark:generate": "ts-node benchmark/generate && npm run build:benchmark",
-    "test:generate": "ts-node -P build/tsconfig.json -C ttypescript build/test.ts",
+    "test:generate": "ts-node -P build/tsconfig.json build/test.ts",
     "----------------------------------------------": "",
-    "build": "rimraf lib && ttsc --removeComments --declaration false && ttsc --emitDeclarationOnly",
-    "build:test": "rimraf bin && ttsc -p test/tsconfig.json",
-    "build:benchmark": "rimraf measure && ttsc -p benchmark/tsconfig.json",
+    "build": "rimraf lib && tsc --removeComments --declaration false && tsc --emitDeclarationOnly",
+    "build:test": "rimraf bin && tsc -p test/tsconfig.json",
+    "build:benchmark": "rimraf measure && tsc -p benchmark/tsconfig.json",
     "build:test:prettier": "npm run build:test && prettier --write ./bin/**/*.js",
-    "dev": "rimraf lib && ttsc --watch",
-    "dev:test": "rimraf bin && ttsc -p test/tsconfig.json --watch",
+    "dev": "rimraf lib && tsc --watch",
+    "dev:test": "rimraf bin && tsc -p test/tsconfig.json --watch",
     "eslint": "eslint ./**/*.ts",
     "eslint:fix": "eslint ./**/*.ts --fix",
     "prettier": "prettier  --write ./**/*.ts",
