--- a/packages/typescript-json/package.json
+++ b/packages/typescript-json/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "3.7.8",
+  "version": "3.7.9",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -17,6 +17,7 @@
     "dev:test": "rimraf bin && tsc -p test/tsconfig.json --watch",
     "eslint": "eslint ./**/*.ts",
     "eslint:fix": "eslint ./**/*.ts --fix",
+    "prepare": "ts-patch install",
     "prettier": "prettier  --write ./**/*.ts",
     "-----------------------------------------------": "",
     "issue": "node test/issue",
@@ -65,9 +66,10 @@
   },
   "homepage": "https://github.com/samchon/typia#readme",
   "dependencies": {
-    "typia": "3.7.8"
+    "typia": "3.7.9"
   },
   "peerDependencies": {
+    "ts-patch": "^2.1.0",
     "typescript": ">= 4.5.2 && < 5.0.0"
   },
   "files": [
