--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typia",
-  "version": "3.8.0-dev.20230426-4",
+  "version": "3.8.0",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -67,7 +67,7 @@
   "bugs": {
     "url": "https://github.com/samchon/typia/issues"
   },
-  "homepage": "https://github.com/samchon/typia#readme",
+  "homepage": "https://typia.io",
   "dependencies": {
     "commander": "^10.0.0",
     "comment-json": "^4.2.3",
