--- a/website/package.json
+++ b/website/package.json
@@ -4,6 +4,7 @@
   "description": "Typia Guide Documents",
   "private": true,
   "scripts": {
+    "build": "rimraf .next && rimraf .out && next build && next export && next-sitemap",
     "deploy": "node deploy",
     "dev": "next dev"
   },
@@ -30,6 +31,7 @@
     "@types/node": "18.11.10",
     "@types/react": "^18.0.35",
     "gh-pages": "^5.0.0",
+    "next-sitemap": "^4.0.7",
     "rimraf": "^5.0.0",
     "typescript": "^4.9.3"
   }
