--- a/package.json
+++ b/package.json
@@ -123,6 +123,9 @@
     "uuid": "^8.3.2",
     "zod": "^3.19.1"
   },
+  "stackblitzs": {
+    "startCommand": "npm run prepare && npm run build && npm run build:test && npm run test"
+  },
   "files": [
     "LICENSE",
     "README.md",
