Add `lib.es5.d.ts` to playground

--- a/website/package.json
+++ b/website/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "rimraf .next && rimraf .out && next build && next export && next-sitemap",
     "deploy": "node build/deploy",
-    "dev": "next dev",
+    "dev": "npm run prepare && next dev",
     "prepare": "node build/raw"
   },
   "repository": {
