Publish next version

--- a/packages/typescript-json/package.json
+++ b/packages/typescript-json/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "5.0.0-dev.20230820-2",
+  "version": "5.0.0-dev.20230821",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -68,11 +68,7 @@
   },
   "homepage": "https://typia.io",
   "dependencies": {
-<<<<<<< HEAD
-    "typia": "5.0.0-dev.20230820-2"
-=======
-    "typia": "4.3.2"
->>>>>>> master
+    "typia": "5.0.0-dev.20230821"
   },
   "peerDependencies": {
     "typescript": ">= 4.7.4"
