--- a/packages/typescript-json/package.json
+++ b/packages/typescript-json/package.json
@@ -78,7 +78,7 @@
     "typescript": ">= 4.8.0"
   },
   "stackblitzs": {
-    "startCommand": "npm run postinstall && npm run build && npm run build:test && npm run test"
+    "startCommand": "npm run prepare && npm run build && npm run build:test && npm run test"
   },
   "files": [
     "LICENSE",
