--- a/packages/errors/package.json
+++ b/packages/errors/package.json
@@ -5,14 +5,10 @@
   "description": "Test program of typia generated errors",
   "main": "index.js",
   "scripts": {
-    "-----------------------SETUP-----------------------": "",
-    "preinstall": "node build/preinstall.js",
-    "postinstall": "ts-patch install && npm run setup",
-    "setup": "node build/setup.js",
-    "-----------------------BUILD-----------------------": "",
     "build": "rimraf bin && tsc",
+    "prepare": "ts-patch install",
     "prettier": "prettier ./src/**/*.ts --write",
-    "-----------------------START-----------------------": "",
+    "setup": "node build/setup.js",
     "start": "node index"
   },
   "repository": {
@@ -36,6 +32,6 @@
     "typescript": "5.2.2"
   },
   "dependencies": {
-    "typia": "file:D:\\github\\samchon\\typia/typia-5.3.0-dev.20231122.tgz"
+    "typia": "D:\\github\\samchon\\typia\\typia-5.3.0-dev.20231122.tgz"
   }
 }
