Fix github actions command

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,15 +16,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - name: Build Main Program
-        run: npm install && npm run build
-      - name: Test Automation Program
-        working-directory: ./packages/test
-        run: npm install && npm run build:actions && npm start
-      - name: Test Compilation Error Cases
-        working-directory: ./packages/errors
-        run: npm install && npm start
-      - name: Check Benchmark Program
-        working-directory: ./packages/benchmark
-        run: npm install && npm run build
-
+      - run: npm install
+      - run: npm run build
+      - run: npm run test
